changed from exec() to ProcessBuilder class